--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
+    "commander": "^2.3.0",
     "node": "^0.0.0"
   },
   "devDependencies": {},
